--- a/week7.html
+++ b/week7.html
@@ -144,7 +144,7 @@
 <tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>RAnderson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>McDonald</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Lambo</td>         <td></td><td align=right>0</td></tr>
 <tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
