--- a/week7.html
+++ b/week7.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>75</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>125</td></tr>
 <tr><td>Mack</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Boyd</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Boyd</td>          <td></td><td align=right>25</td></tr>
 <tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Hooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hauschka</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Hooper</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Hauschka</td>      <td></td><td align=right>130</td></tr>
 <tr><td>Meyers</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>430</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>430</td></tr>
+<tr><td>Fournette</td>     <td></td><td align=right>65</td></tr>
+<tr><td>Carson</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>160</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Gould</td>         <td></td><td align=right>60</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>870</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (2)</b></font></td></tr>
-<tr><td>Wentz</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hilton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Graham</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Wentz</td>         <td></td><td align=right>75</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>135</td></tr>
+<tr><td>Gurley</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Hilton</td>        <td></td><td align=right>85</td></tr>
+<tr><td>Sutton</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Graham</td>        <td></td><td align=right>80</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>95</td></tr>
 <tr><td>Haskins</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>585</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>155</td></tr>
 <tr><td>KJohnson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>70</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>75</td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>300</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (4)</b></font></td></tr>
-<tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Cousins</td>       <td></td><td align=right>230</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>220</td></tr>
 <tr><td>Lindsay</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>25</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>PWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Lutz</td>          <td></td><td align=right>80</td></tr>
+<tr><td>PWilliams</td>     <td></td><td align=right>40</td></tr>
+<tr><td></td>              <td></td><td align=right>625</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
 <tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Howard</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Howard</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Cooks</td>         <td></td><td align=right>25</td></tr>
 <tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Rudolph</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Rudolph</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>120</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>320</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>190</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>105</td></tr>
+<tr><td>Coleman</td>       <td></td><td align=right>30</td></tr>
 <tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Chark</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Chark</td>         <td></td><td align=right>25</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>210</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>115</td></tr>
+<tr><td>Minshew</td>       <td></td><td align=right>65</td></tr>
+<tr><td></td>              <td></td><td align=right>740</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (10)</b></font></td></tr>
-<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Watson</td>        <td></td><td align=right>75</td></tr>
 <tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Dorsett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>145</td></tr>
+<tr><td>JJones</td>        <td></td><td align=right>45</td></tr>
+<tr><td>Dorsett</td>       <td></td><td align=right>100</td></tr>
 <tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Crosby</td>        <td></td><td align=right>30</td></tr>
 <tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>395</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (7)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>White</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>85</td></tr>
+<tr><td>White</td>         <td></td><td align=right>25</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>60</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>100</td></tr>
 <tr><td>Jeffery</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>35</td></tr>
 <tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>305</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
-<tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Brissett</td>      <td></td><td align=right>180</td></tr>
+<tr><td>Bell</td>          <td></td><td align=right>35</td></tr>
 <tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>105</td></tr>
 <tr><td>RAnderson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lambo</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Lambo</td>         <td></td><td align=right>95</td></tr>
+<tr><td>DJones</td>        <td></td><td align=right>100</td></tr>
+<tr><td></td>              <td></td><td align=right>515</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -168,41 +168,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Rich(9)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>4165</font></td>
-    <td><font size=2>4595</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4485</font></td>
+    <td><font size=2>5220</font></td>
     <td><font size=2>900</font></td>
-    <td><font size=2>410</font></td>
+    <td><font size=2>320</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4510</font></td>
-    <td><font size=2>3425</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4810</font></td>
+    <td><font size=2>4010</font></td>
     <td><font size=2>1105</font></td>
-    <td><font size=2>335</font></td>
+    <td><font size=2>300</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>John(7)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4445</font></td>
-    <td><font size=2>4840</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4750</font></td>
+    <td><font size=2>5355</font></td>
     <td><font size=2>1065</font></td>
-    <td><font size=2>420</font></td>
+    <td><font size=2>305</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3765</font></td>
-    <td><font size=2>3805</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4195</font></td>
+    <td><font size=2>4675</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3135</font></td>
-    <td><font size=2>4055</font></td>
+    <td><font size=2>3875</font></td>
+    <td><font size=2>4450</font></td>
     <td><font size=2>840</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>0</font></td></tr>
@@ -215,43 +215,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Matthew(2)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>4100</font></td>
-    <td><font size=2>3685</font></td>
+    <td><font size=2>4685</font></td>
+    <td><font size=2>3985</font></td>
     <td><font size=2>855</font></td>
     <td><font size=2>450</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2685</font></td>
-    <td><font size=2>3070</font></td>
-    <td><font size=2>620</font></td>
+    <td><font size=2>3555</font></td>
+    <td><font size=2>3500</font></td>
+    <td><font size=2>870</font></td>
     <td><font size=2>340</font></td>
-    <td><font size=2>0</font></td></tr>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(4)</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4965</font></td>
-    <td><font size=2>4370</font></td>
+    <td><font size=2>5590</font></td>
+    <td><font size=2>4690</font></td>
     <td><font size=2>1100</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Mike(10)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3970</font></td>
-    <td><font size=2>4150</font></td>
-    <td><font size=2>990</font></td>
-    <td><font size=2>280</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Sam(8)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4000</font></td>
-    <td><font size=2>3745</font></td>
+    <td><font size=2>4515</font></td>
+    <td><font size=2>4050</font></td>
     <td><font size=2>1305</font></td>
     <td><font size=2>405</font></td>
     <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Mike(10)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4365</font></td>
+    <td><font size=2>4890</font></td>
+    <td><font size=2>990</font></td>
+    <td><font size=2>280</font></td>
+    <td><font size=2>0</font></td></tr>
 </table>
