--- a/pickups.html
+++ b/pickups.html
@@ -42,8 +42,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Chase Edmonds/Raheem Mostert</td>
+<td width=50>10/21</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -163,8 +163,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Eric Ebron/Justin Jackson</td>
+<td width=50>10/22</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -336,6 +336,8 @@ Team 1  - Raheem Mostert/Derrius Guice (9/17)<br>
 Team 5  - Darren Waller/Ben Roethlisberger (9/17)<br>
 Team 5  - Darrel Williams/Antonio Brown (9/24)<br>
 Team 5  - Will Dissly/David Njoku (9/25)<br>
-Team 8  - Josh Lambo/Stephen Gostkowski (10/8)
+Team 8  - Josh Lambo/Stephen Gostkowski (10/8)<br>
+Team 3  - Brandon McManus/Kerryon Johnson (10/23)<br>
+Team 1  - Mohamed Sanu/Josh Gordon (10/23)
 </td></tr>
 </table>
