--- a/roster.html
+++ b/roster.html
@@ -13,14 +13,14 @@
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
 <tr><td>IND</td><td>Marlon Mack            </td></tr>
-<tr><td> SF</td><td>Raheem Mostert         </td></tr>
+<tr><td>ARI</td><td>Chase Edmonds          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Odell Beckham          </td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
 <tr><td>CIN</td><td>Tyler Boyd             </td></tr>
-<tr><td> NE</td><td>Josh Gordon            </td></tr>
-<tr><td>DEN</td><td>Emmanuel Sanders       </td></tr>
+<tr><td> SF</td><td>Emmanuel Sanders       </td></tr>
 <tr><td>BUF</td><td>Duke Williams          </td></tr>
+<tr><td> NE</td><td>Mohamed Sanu           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Austin Hooper          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -67,7 +67,6 @@
 <tr><td>BAL</td><td>Lamar Jackson          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Damien Williams        </td></tr>
-<tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Stefon Diggs           </td></tr>
@@ -80,6 +79,7 @@
 <tr><td> NE</td><td>Matt LaCosse           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
+<tr><td>DEN</td><td>Brandon McManus        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
 <tr><td>MIN</td><td>Alexander Mattison     </td></tr>
@@ -154,7 +154,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Leonard Fournette      </td></tr>
 <tr><td>SEA</td><td>Chris Carson           </td></tr>
-<tr><td>LAC</td><td>Justin Jackson         </td></tr>
 <tr><td> TB</td><td>Ronald Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>DeAndre Hopkins        </td></tr>
@@ -165,6 +164,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>OJ Howard              </td></tr>
 <tr><td>TEN</td><td>Delanie Walker         </td></tr>
+<tr><td>IND</td><td>Eric Ebron             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Robbie Gould           </td></tr>
 <tr><td>ARI</td><td>Zane Gonzalez          </td></tr>
