--- a/pickups.html
+++ b/pickups.html
@@ -338,6 +338,7 @@ Team 5  - Darrel Williams/Antonio Brown (9/24)<br>
 Team 5  - Will Dissly/David Njoku (9/25)<br>
 Team 8  - Josh Lambo/Stephen Gostkowski (10/8)<br>
 Team 3  - Brandon McManus/Kerryon Johnson (10/23)<br>
-Team 1  - Mohamed Sanu/Josh Gordon (10/23)
+Team 1  - Mohamed Sanu/Josh Gordon (10/23)<br>
+Team 5  - DeVante Parker/Will Dissly (10/24)
 </td></tr>
 </table>
