--- a/roster.html
+++ b/roster.html
@@ -135,9 +135,9 @@
 <tr><td> NE</td><td>Julian Edelman         </td></tr>
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
 <tr><td>JAX</td><td>DJ Chark               </td></tr>
+<tr><td>MIA</td><td>DeVante Parker         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>OAK</td><td>Darren Waller          </td></tr>
-<tr><td>SEA</td><td>Will Dissly            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
 <tr><td height=9></td><td></td></tr>
