--- a/week8.html
+++ b/week8.html
@@ -66,13 +66,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>KJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Brees</td>         <td></td><td align=right>0</td></tr>
+<tr><td>TJohnson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -96,10 +96,10 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
 <tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>LMurray</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Chark</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
+<tr><td>Parker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
@@ -111,7 +111,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
 <tr><td>Brissett</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DFreeman</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>RAnderson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
@@ -201,7 +201,7 @@
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>2</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3875</font></td>
+    <td><font size=2>3865</font></td>
     <td><font size=2>4450</font></td>
     <td><font size=2>840</font></td>
     <td><font size=2>210</font></td>
@@ -250,7 +250,7 @@
     <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
     <td><font size=2>4365</font></td>
-    <td><font size=2>4890</font></td>
+    <td><font size=2>4880</font></td>
     <td><font size=2>990</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
