--- a/week8.html
+++ b/week8.html
@@ -54,7 +54,7 @@
 <tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Shepard</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Jeffery</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
