--- a/roster.html
+++ b/roster.html
@@ -237,6 +237,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Rich (9)</b></font></td></tr>
 <tr><td>ATL</td><td>Matt Ryan              </td></tr>
 <tr><td>DAL</td><td>Dak Prescott           </td></tr>
+<tr><td>TEN</td><td>Ryan Tannehill         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Nick Chubb             </td></tr>
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
@@ -256,7 +257,6 @@
 <tr><td>BUF</td><td>Devin Singletary       </td></tr>
 <tr><td>BAL</td><td>Marquise Brown         </td></tr>
 <tr><td> KC</td><td>Mecole Hardman         </td></tr>
-<tr><td>ARI</td><td>Andy Isabella          </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 </table>
 </td>
