--- a/week8.html
+++ b/week8.html
@@ -109,7 +109,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
-<tr><td>Brissett</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
 <tr><td>DFreeman</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
@@ -139,11 +139,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
-<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Tannehill</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Howard</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
-<tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Rudolph</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
