--- a/week8.html
+++ b/week8.html
@@ -99,7 +99,7 @@
 <tr><td>LMurray</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
-<tr><td>Parker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
