--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <a href="week5.html"><b>5</b></a>
 <a href="week6.html"><b>6</b></a>
 <a href="week7.html"><b>7</b></a>
-<a href="week8.html"><b>8P</b></a><br>
+<a href="week8.html"><b>8</b></a>
+<a href="week9.html"><b>9P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -65,45 +66,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Rich(9)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4485</font></td>
-    <td><font size=2>5220</font></td>
-    <td><font size=2>900</font></td>
-    <td><font size=2>320</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4810</font></td>
-    <td><font size=2>4010</font></td>
-    <td><font size=2>1105</font></td>
-    <td><font size=2>300</font></td>
-    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>John(7)</font></td>
-    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4750</font></td>
-    <td><font size=2>5360</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5555</font></td>
+    <td><font size=2>5905</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>305</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>3</font></td>
+<tr><td><font size=2>Rich(9)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4195</font></td>
-    <td><font size=2>4675</font></td>
-    <td><font size=2>940</font></td>
-    <td><font size=2>270</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4795</font></td>
+    <td><font size=2>5815</font></td>
+    <td><font size=2>900</font></td>
+    <td><font size=2>310</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3865</font></td>
-    <td><font size=2>4450</font></td>
-    <td><font size=2>840</font></td>
+    <td><font size=2>5570</font></td>
+    <td><font size=2>5085</font></td>
+    <td><font size=2>1705</font></td>
     <td><font size=2>210</font></td>
+    <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>States(3)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5260</font></td>
+    <td><font size=2>5205</font></td>
+    <td><font size=2>1105</font></td>
+    <td><font size=2>300</font></td>
+    <td><font size=2>2</font></td></tr>
+<tr><td><font size=2>Roger(1)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4715</font></td>
+    <td><font size=2>5245</font></td>
+    <td><font size=2>940</font></td>
+    <td><font size=2>270</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -113,46 +114,46 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Matthew(2)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>4685</font></td>
-    <td><font size=2>3985</font></td>
-    <td><font size=2>855</font></td>
-    <td><font size=2>450</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3555</font></td>
-    <td><font size=2>3500</font></td>
+    <td><font size=2>4150</font></td>
+    <td><font size=2>3810</font></td>
     <td><font size=2>870</font></td>
     <td><font size=2>340</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(4)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5590</font></td>
-    <td><font size=2>4690</font></td>
-    <td><font size=2>1100</font></td>
+    <td><font size=2>6785</font></td>
+    <td><font size=2>5140</font></td>
+    <td><font size=2>1195</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Sam(8)</font></td>
+<tr><td><font size=2>Matthew(2)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4520</font></td>
-    <td><font size=2>4050</font></td>
-    <td><font size=2>1305</font></td>
-    <td><font size=2>405</font></td>
-    <td><font size=2>1</font></td></tr>
+    <td><font size=2>5230</font></td>
+    <td><font size=2>4790</font></td>
+    <td><font size=2>855</font></td>
+    <td><font size=2>450</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Mike(10)</font></td>
-    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4365</font></td>
-    <td><font size=2>4880</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4935</font></td>
+    <td><font size=2>5400</font></td>
     <td><font size=2>990</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Sam(8)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5155</font></td>
+    <td><font size=2>5755</font></td>
+    <td><font size=2>1305</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>1</font></td></tr>
 </table>
 </table>
 </body>
