--- a/roster.html
+++ b/roster.html
@@ -101,7 +101,7 @@
 <tr><td>CAR</td><td>Christian McCaffrey    </td></tr>
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
 <tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
-<tr><td>MIA</td><td>Kenyan Drake           </td></tr>
+<tr><td>ARI</td><td>Kenyan Drake           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
