--- a/thousand.html
+++ b/thousand.html
@@ -15,6 +15,12 @@
     <td>1715</td>
     <td>Randy</td>
     <td>500</td></tr>
+<tr><td>2019</td>
+    <td>Week 8</td>
+    <td>Grant Mydland</td>
+    <td>1705</td>
+    <td>Sam</td>
+    <td>635</td></tr>
 <tr><td>2010</td>
     <td>Week 14</td>
     <td>Grant Mydland</td>
@@ -177,6 +183,12 @@
     <td>1205</td>
     <td>Steven</td>
     <td>675</td></tr>
+<tr><td>2019</td>
+    <td>Week 8</td>
+    <td>Randy Edwards</td>
+    <td>1195</td>
+    <td>States</td>
+    <td>450</td></tr>
 <tr><td>1994</td>
     <td>Week 1</td>
     <td>Randy Edwards</td>
