--- a/roster.html
+++ b/roster.html
@@ -74,12 +74,12 @@
 <tr><td>DAL</td><td>Michael Gallup         </td></tr>
 <tr><td> SF</td><td>Dante Pettis           </td></tr>
 <tr><td>ARI</td><td>Larry Fitzgerald       </td></tr>
+<tr><td>OAK</td><td>Tyrell Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Zach Ertz              </td></tr>
-<tr><td> NE</td><td>Matt LaCosse           </td></tr>
+<tr><td>HOU</td><td>Darren Fells           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
-<tr><td>DEN</td><td>Brandon McManus        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
 <tr><td>MIN</td><td>Alexander Mattison     </td></tr>
@@ -94,7 +94,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Randy (4)</b></font></td></tr>
 <tr><td>CAR</td><td>Cam Newton             </td></tr>
-<tr><td>CHI</td><td>Mitch Trubisky         </td></tr>
 <tr><td>MIN</td><td>Kirk Cousins           </td></tr>
 <tr><td>DET</td><td>Matthew Stafford       </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -107,6 +106,7 @@
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
 <tr><td>HOU</td><td>Will Fuller            </td></tr>
+<tr><td>DET</td><td>Marvin Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
@@ -123,6 +123,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (5)</b></font></td></tr>
 <tr><td>LAR</td><td>Jared Goff             </td></tr>
 <tr><td>CIN</td><td>Andy Dalton            </td></tr>
+<tr><td>OAK</td><td>Derek Carr             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
 <tr><td>LAC</td><td>Melvin Gordon          </td></tr>
@@ -142,7 +143,6 @@
 <tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
-<tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>JAX</td><td>Gardner Minshew        </td></tr>
 </table>
 </td>
