--- a/pickups.html
+++ b/pickups.html
@@ -70,8 +70,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Darren Fells/Brandon McManus</td>
+<td width=50>10/31</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -82,8 +82,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tyrell Williams/Matt LaCosse</td>
+<td width=50>10/31</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -99,8 +99,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Marvin Jones/Mitch Trubisky</td>
+<td width=50>10/29</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -170,8 +170,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Derek Carr/Deebo Samuel</td>
+<td width=50>10/29</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
