--- a/week9.html
+++ b/week9.html
@@ -36,13 +36,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>Brees</td>         <td></td><td align=right>0</td></tr>
-<tr><td>TJohnson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
+<tr><td>TWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Fells</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -69,25 +69,25 @@
 <tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
+<tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
+<tr><td>PWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>LMurray</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
 <tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
