--- a/week9.html
+++ b/week9.html
@@ -21,14 +21,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (2)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Wentz</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Michel</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Golladay</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Graham</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Haskins</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -110,10 +110,10 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (7)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Samuels</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Jeffery</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
