--- a/week9.html
+++ b/week9.html
@@ -11,10 +11,10 @@
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Edmonds</td>       <td></td><td align=right>0</td></tr>
 <tr><td>ESanders</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Boyd</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Hooper</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hauschka</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Meyers</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Boykin</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -125,13 +125,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
-<tr><td>Tannehill</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Rudolph</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
