--- a/pickups.html
+++ b/pickups.html
@@ -339,6 +339,7 @@ Team 5  - Will Dissly/David Njoku (9/25)<br>
 Team 8  - Josh Lambo/Stephen Gostkowski (10/8)<br>
 Team 3  - Brandon McManus/Kerryon Johnson (10/23)<br>
 Team 1  - Mohamed Sanu/Josh Gordon (10/23)<br>
-Team 5  - DeVante Parker/Will Dissly (10/24)
+Team 5  - DeVante Parker/Will Dissly (10/24)<br>
+Team 1  - Josh Gordon/Mike Nugent (11/1)
 </td></tr>
 </table>
