--- a/thousand.html
+++ b/thousand.html
@@ -411,6 +411,12 @@
     <td>1115</td>
     <td>Matthew</td>
     <td>330</td></tr>
+<tr><td>2019</td>
+    <td>Week 9</td>
+    <td>Randy Edwards</td>
+    <td>1115</td>
+    <td>Grant</td>
+    <td>455</td></tr>
 <tr><td>2002</td>
     <td>Week 10</td>
     <td>Brian Crooch</td>
