--- a/roster.html
+++ b/roster.html
@@ -21,11 +21,11 @@
 <tr><td> SF</td><td>Emmanuel Sanders       </td></tr>
 <tr><td>BUF</td><td>Duke Williams          </td></tr>
 <tr><td> NE</td><td>Mohamed Sanu           </td></tr>
+<tr><td>SEA</td><td>Josh Gordon            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Austin Hooper          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Steven Hauschka        </td></tr>
-<tr><td> NE</td><td>Mike Nugent            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
 <tr><td>BAL</td><td>Miles Boykin           </td></tr>
